# grpc-ANNS

./: .gitignore  README.md
wenqi_cpp_projects/ANN/: CMakeLists.txt  async_master_server_many_requests.cc  async_master_servers_multiple_connections.cc  async_storage_server.cc  start_client.py
wenqi_cpp_projects/async_greet/: CMakeLists.txt  greeter_async_client.cc  greeter_async_client_many_requests.cc  greeter_async_client_multi_servers.cc  greeter_async_server.cc  start_servers.sh
wenqi_cpp_projects/cmake/: common.cmake
wenqi_cpp_projects/keyvaluestore_grpc_example/: CMakeLists.txt  caching_interceptor.h  client.cc  server.cc
wenqi_cpp_projects/protos/: ANN.proto
wenqi_cpp_projects/sync_greet/: CMakeLists.txt  greeter_client.cc
wenqi_python_projects/ANN-demo/: ANN_pb2.py  ANN_pb2_grpc.py  client.py  server.py
wenqi_python_projects/key-value/: client.py  keyvaluestore_pb2.py  keyvaluestore_pb2_grpc.py  server.py
wenqi_python_projects/proto/: ANN.proto  keyvaluestore.proto
